# cli-davince

./: .gitignore  MANIFEST.in  README.md  RESOLVE.md  pyproject.toml
examples/: edit-plan.example.json
skills/cli-anything-resolve/: SKILL.md
src/cli_anything/: __init__.py
src/cli_anything/resolve/: __init__.py  cli.py  errors.py  output.py  plan.py  resolve_client.py  services.py
src/cli_anything/resolve/skills/: SKILL.md
tests/: fakes.py  test_cli.py  test_client.py  test_executor.py  test_plan.py  test_services.py
