[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-anything-resolve"
version = "0.1.0"
description = "Agent-friendly CLI for DaVinci Resolve editing workflows"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "Apache-2.0"}
authors = [{name = "cli-anything-resolve contributors"}]
dependencies = ["click>=8.1", "pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
cli-anything-resolve = "cli_anything.resolve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cli_anything.resolve" = ["skills/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
